# HMS

./: .env.example  .gitignore  README.md  start-dev.bat
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  filtering.py  pagination.py  router.py
backend/app/api/routes/: __init__.py  health.py
backend/app/core/: __init__.py  config.py  exception_handlers.py  logging.py  middleware.py  request_context.py
backend/app/db/: __init__.py  base.py  conventions.py  ids.py  models.py  session.py
backend/app/modules/: __init__.py
backend/app/modules/ai_intelligence/: __init__.py  api.py  schemas.py  service.py
backend/app/modules/analytics/: __init__.py  api.py  schemas.py  service.py
backend/app/modules/audit/: api.py  schemas.py  service.py
backend/app/modules/b2b/: __init__.py  api.py  schemas.py  service.py
backend/app/modules/billing/: __init__.py  api.py  schemas.py  (+1 more)
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 0001_identity_foundation.py  0002_seed_roles_permissions.py  0003_workflow_tables.py
backend/tarini_v6_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_admin_api.py  test_ai_command_copilot_api.py  test_analytics_api.py  test_audit_api.py  test_auth.py  test_b2b_api.py  test_crm_api.py  test_error_contract.py  test_health.py  test_lims_ris_pacs_api.py  test_model_conventions.py  test_notifications_api.py  test_pagination_helpers.py  test_patient_billing_api.py  test_workflow_reports_api.py
(+199 files in other folders)
