[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tarini-v6-backend"
version = "0.1.0"
description = "FastAPI backend for Tarini V6 healthcare intelligence platform."
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.18.4",
  "email-validator>=2.3.0",
  "fastapi>=0.136.1",
  "psycopg[binary]>=3.3.4",
  "uvicorn[standard]>=0.47.0",
  "pydantic>=2.13.4",
  "sqlalchemy>=2.0.49"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
